Fixes css align of checkbox

--- a/opentoutatice-ecm-platform-web/src/main/less/toutatice-popup.less
+++ b/opentoutatice-ecm-platform-web/src/main/less/toutatice-popup.less
@@ -70,6 +70,7 @@ body {
 	}
 	
 	input[type="checkbox"] {
+		height: auto;
 		width: auto;
 		box-shadow: none;
 	}
